# uart_16550

./: .editorconfig  .typos.toml  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  Changelog.md  LICENSE-MIT  README.md  azure-pipelines.yml
.github/workflows/: build.yml  dependabot-auto-merge.yml  qa.yml  rust.yml
integration-test/: .gitignore  Makefile  README.md  rust-toolchain.toml
integration-test/riscv/: Cargo.toml  Makefile  link.ld
integration-test/riscv/src/: main.rs  start.S
integration-test/src/: main.rs  start.S
integration-test/x86/: Cargo.toml  Makefile  link.ld  x86-unknown-none.json
integration-test/x86/src/: cpuid.rs  debugcon.rs  main.rs  pvh.rs  start.S
src/: backend.rs  config.rs  embedded_io.rs  error.rs  lib.rs  mmio.rs  port.rs  register.rs  spec.rs  tty.rs  uart_16550.rs  x86_64.rs
src/backend/: mmio.rs  mod.rs  pio.rs
test/: .gitignore  Cargo.toml  Makefile  build.rs  link.ld  rust-toolchain.toml  x86-unknown-none.json
test/src/: debugcon.rs  main.rs
tests/: api.rs
