[package]
name = "uart_16550"
version = "0.2.18"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>", "Philipp Oppermann <dev@phil-opp.com>"]
description = "Minimal support for uart_16550 serial output."
license = "MIT"
repository = "https://github.com/rust-osdev/uart_16550"
edition = "2018"

[dependencies]
bitflags = "1.1.0"
rustversion = "1.0.5"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14.9", default-features = false, features = ["instructions"] }

[features]
default = []
# TOOD: Remove these deprecated features on next breaking release
stable = []
nightly = []

[package.metadata.release]
dev-version = false
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
