[package]
name = "uart_16550"
version = "0.3.1"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>", "Philipp Oppermann <dev@phil-opp.com>"]
description = "Minimal support for uart_16550 serial output."
license = "MIT"
repository = "https://github.com/rust-osdev/uart_16550"
edition = "2018"

[dependencies]
bitflags = "2"
rustversion = "1.0.5"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86 = "0.52"

[features]
default = []
# TOOD: Remove these deprecated features on next breaking release
stable = []
nightly = []

[package.metadata.release]
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
