[package]
name = "kernel-x86"
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[dependencies]
anyhow = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false }
qemu-exit = { version = "3.0.2", default-features = false }
uart_16550 = { path = "../../" }
